# RAG-based-Chat-Assistant

./: .gitignore  LICENSE  README.md  api_server.py  openwebui_pipe.py  pyproject.toml  rag_system.py
