[tool.poetry]
name = "rag-based-chat-assistant"
version = "0.1.0"
description = "A RAG-based chat assistant using LangChain and FAISS"
authors = ["shar-mayank"]
readme = "README.md"
packages = [{include = "rag_system.py"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=1.0.0"
langchain-community = ">=0.4.0"
langchain-ollama = ">=1.0.0"
faiss-cpu = ">=1.7.4"
pypdf = ">=3.17.0"
pymupdf = ">=1.23.0"
watchdog = ">=3.0.0"
pytesseract = ">=0.3.10"
pdf2image = ">=1.16.3"
python-dotenv = ">=1.0.0"
fastapi = ">=0.115.0"
uvicorn = {version = ">=0.34.0", extras = ["standard"]}
python-multipart = ">=0.0.18"

[tool.poetry.group.dev.dependencies]
# Add development dependencies here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uv]
# UV configuration for faster dependency resolution
# UV will automatically be used by Poetry if installed
